--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "axios": "^0.26.0",
+    "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "patternomaly": "^1.3.2",
+    "roboto-fontface": "*",
+    "vue": "^3.2.31",
+    "vue-chart-3": "^3.1.2",
+    "vue-chartjs": "^3.5.1",
+    "vue-google-charts": "^0.3.3",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuetify": "^3.0.0-alpha.0",
+    "vuex": "^4.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,6 +32,10 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.7",
+    "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
